--- a/manifest.json
+++ b/manifest.json
@@ -13,12 +13,22 @@
 
     "content_scripts": [
         {
-            "matches": [ "http://localhost:8079/*" ],
+            "matches": [ "https://s.taobao.com/search*", "https://item.taobao.com/item.htm*" ],
             "js": [ "build/vendor.js", "build/main/bundle.js" ],
             "css": [ "build/main/bundle.css" ],
-            "run_at": "document_start"
+            "run_at": "document_end"
         }
     ],
+
+    "browser_action": {
+        "default_icon": "build/icons/16.png",
+        "default_title": "chrome extension",
+        "default_popup": "build/popup.html"
+    },
+
+    "background": {
+        "page": "build/background.html"
+    },
 
     "permissions": [
         "tabs",
