--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "content_scripts": [
         {
             "matches": [ "https://s.taobao.com/search*", "https://item.taobao.com/item.htm*" ],
-            "js": [ "build/vendor.js", "build/main/bundle.js" ],
+            "js": [ "build/alloyimage.js", "build/vendor.js", "build/main/bundle.js" ],
             "css": [ "build/main/bundle.css" ],
             "run_at": "document_end"
         }
