--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.0",
+    "dom-to-image": "^2.5.2",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "file-saver": "^1.3.3",
     "glob": "^7.1.1",
     "jquery": "^3.1.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "style-loader": "^0.13.1",
+    "tesseract.js": "^1.0.10",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
