--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-recognize-capture",
   "version": "1.0.0",
-  "description": "",
+  "description": "-",
   "main": "index.js",
   "scripts": {
     "start": "node ./server.js",
